--- a/static/style.css
+++ b/static/style.css
@@ -22,13 +22,13 @@ h1 {
 h2, h3 {font-family: 'Raleway', sans-serif; }
 
 .row, #admin-console {
-  max-width: 800px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
 #admin-console {
-  width: 60%;
-  margin: 1rem auto 4rem;
+  width: 65%;
+  margin: 1rem auto 1rem;
   position: absolute;
   max-width: 600px;
   bottom: 0;
@@ -67,13 +67,16 @@ h2, h3 {font-family: 'Raleway', sans-serif; }
 @media screen and (max-width: 576px) {
   #filler {display: none; }
   #submit {width: 60%; }
+  body {
+    background-color: #fff;
+  }
 }
 
 @media screen and (max-width: 800px) {
   #admin-console {
     width: 90%;
-    position: static;
-    margin: 2rem auto 1rem;
+    position: relative;
+    margin: .5rem auto .5rem;
   }
 }
 
