--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,7 @@
 
 * {box-sizing: border-box; }
 
-body {
-  background: linear-gradient(180deg, hsla(0, 0%, 100%, 1) 0%, hsla(0, 0%, 99%, 1) 50%, hsla(51, 4%, 98%, 1) 99%);
-  height: 100vh;
-}
+body { height: 100%; }
 
 .row, #zipcode-input {
   max-width: 900px;
@@ -51,10 +48,25 @@ h2, h3 {font-family: 'Raleway', sans-serif; }
 
 #submit {background-color: var(--root-blue); }
 
+#settings-link {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5px;
+  margin: 1rem;
+}
+
 @media screen and (max-width: 576px) {
   #filler {display: none; }
-  body {
-    background-color: #fff;
+  body { background-color: #fff; }
+  #settings-link { 
+    position: relative;
+    margin-top: 1rem;
+   }
+  #alert-card, #weather-card {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
