--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,10 @@
 
 * {box-sizing: border-box; }
 
-body { height: 100%; }
+body { 
+  height: 100vh; 
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(245,249,248,1) 100%);
+}
 
 .row, #zipcode-input {
   max-width: 900px;
@@ -22,7 +25,7 @@ h1 {
 h2, h3 {font-family: 'Raleway', sans-serif; }
 
 .card {
-  background: linear-gradient(180deg, hsla(51, 4%, 97%, 1) 0%, hsla(0, 0%, 98.5%, 1) 50%, hsla(0, 0%, 100%, 1) 99%);
+  background: linear-gradient(180deg, rgb(239, 239, 240) 0%, rgba(255,255,255,1) 100%);
   height: 420px;
 }
 
